added minimal styles for Filters, Sort and Pagination
changed all styles to use CSS Variables

--- a/src/assets/css/layout-justified.scss
+++ b/src/assets/css/layout-justified.scss
@@ -1,16 +1,18 @@
+@import "./variables-justified";
+
 /*
  * Visual Portfolio layout Justified.
  */
 [data-vp-layout="justified"] {
     .vp-portfolio__items {
-        transition: .2s height ease-in-out;
+        transition: var(--vp-justified__transition-duration) height var(--vp-justified__transition-easing);
         will-change: height;
     }
     .vp-portfolio__item-wrap {
         float: left;
         top: 0;
         left: 0;
-        transition: .2s transform ease-in-out, .2s width ease-in-out, .2s height ease-in-out;
+        transition: var(--vp-justified__transition-duration) transform var(--vp-justified__transition-easing), var(--vp-justified__transition-duration) width var(--vp-justified__transition-easing), var(--vp-justified__transition-duration) height var(--vp-justified__transition-easing);
         will-change: transform, width, height;
     }
 }
