--- a/src/templates/items-list/filter/dropdown/style.scss
+++ b/src/templates/items-list/filter/dropdown/style.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 /**
  * Dropdown filter style
  */
@@ -6,8 +8,8 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 0;
-    margin: -6px;
-    margin-bottom: 17px;
+    margin-top: calc(-1 * var(--vp-filter-dropdown--items__gap));
+    margin-left: calc(-1 * var(--vp-filter-dropdown--items__gap));
     list-style-type: none;
 
     // align
@@ -20,26 +22,26 @@
 
     select {
         display: block;
-        min-width: 40px;
-        padding: .9em 1.6em;
-        margin: 6px;
-        font-size: .7em;
-        font-weight: 600;
-        line-height: 1.4;
-        color: #787878;
-        text-decoration: none;
-        text-transform: uppercase;
-        letter-spacing: .015em;
-        background-color: #f7f7f7;
+        min-width: var(--vp-filter-dropdown--items__min-width);
+        padding: var(--vp-filter-dropdown--items__padding-v) var(--vp-filter-dropdown--items__padding-h);
+        margin-top: var(--vp-filter-dropdown--items__gap);
+        margin-left: var(--vp-filter-dropdown--items__gap);
+        font-size: var(--vp-filter-dropdown--items__font-size);
+        font-weight: var(--vp-filter-dropdown--items__font-weight);
+        line-height: var(--vp-filter-dropdown--items__line-height);
+        color: var(--vp-filter-dropdown--items__color);
+        text-decoration: var(--vp-filter-dropdown--items__text-decoration);
+        text-transform: var(--vp-filter-dropdown--items__text-transform);
+        letter-spacing: var(--vp-filter-dropdown--items__letter-spacing);
+        background-color: var(--vp-filter-dropdown--items__background-color);
         border: none;
-        border-radius: 5px;
-        transition: .2s background-color ease, .2s color ease;
-        will-change: background-color, color;
+        border-radius: var(--vp-filter-dropdown--items__border-radius);
+        transition: var(--vp-filter-dropdown-transition-duration) background-color var(--vp-filter-dropdown-transition-easing), var(--vp-filter-dropdown-transition-duration) color var(--vp-filter-dropdown-transition-easing);
 
         &:hover,
         &:focus {
-            color: #4b4b4b;
-            background-color: #e8e8e8;
+            color: var(--vp-filter-dropdown--items-hover__color);
+            background-color: var(--vp-filter-dropdown--items-hover__background-color);
         }
     }
 }
