--- a/src/templates/items-list/filter/style.scss
+++ b/src/templates/items-list/filter/style.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 /**
  * Default filter style
  */
@@ -6,8 +8,9 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 0;
-    margin: -6px;
-    margin-bottom: 17px;
+    margin: 0;
+    margin-top: calc(-1 * var(--vp-filter-default--items__gap));
+    margin-left: calc(-1 * var(--vp-filter-default--items__gap));
     list-style-type: none;
 
     .vp-filter__item a {
@@ -26,43 +29,49 @@
     .vp-filter__item {
         flex: 0 0 auto;
         padding: 0;
-        margin: 6px;
+        margin: 0;
+        margin-top: var(--vp-filter-default--items__gap);
+        margin-left: var(--vp-filter-default--items__gap);
         text-align: center;
         list-style-type: none;
 
         > * {
             display: block;
-            min-width: 40px;
-            padding: .9em 1.6em;
-            font-size: .7em;
-            font-weight: 600;
-            line-height: 1.4;
-            color: #787878;
-            text-decoration: none;
-            text-transform: uppercase;
-            letter-spacing: .015em;
-            background-color: #f7f7f7;
-            border-radius: 5px;
-            transition: .2s background-color ease, .2s color ease;
-            will-change: background-color, color;
+            min-width: var(--vp-filter-default--items__min-width);
+            padding: var(--vp-filter-default--items__padding-v) var(--vp-filter-default--items__padding-h);
+            font-size: var(--vp-filter-default--items__font-size);
+            font-weight: var(--vp-filter-default--items__font-weight);
+            line-height: var(--vp-filter-default--items__line-height);
+            color: var(--vp-filter-default--items__color);
+            text-decoration: var(--vp-filter-default--items__text-decoration);
+            text-transform: var(--vp-filter-default--items__text-transform);
+            letter-spacing: var(--vp-filter-default--items__letter-spacing);
+            background-color: var(--vp-filter-default--items__background-color);
+            border-radius: var(--vp-filter-default--items__border-radius);
+            transition: var(--vp-filter-default-transition-duration) background-color var(--vp-filter-default-transition-easing), var(--vp-filter-default-transition-duration) color var(--vp-filter-default-transition-easing);
         }
 
-        &:not(.vp-filter__item-active) > a:hover,
-        &:not(.vp-filter__item-active) > a:focus {
-            color: #4b4b4b;
-            background-color: #e8e8e8;
+        > a:hover,
+        > a:focus {
+            color: var(--vp-filter-default--items-hover__color);
+            background-color: var(--vp-filter-default--items-hover__background-color);
         }
 
-        &.vp-filter__item-active > * {
-            color: #fff;
-            cursor: default;
-            background-color: #2540cc;
+        &.vp-filter__item-active {
+            --vp-filter-default--items__color: var(--vp-filter-default--items-active__color);
+            --vp-filter-default--items__background-color: var(--vp-filter-default--items-active__background-color);
+            --vp-filter-default--items-hover__color: var(--vp-filter-default--items-active__color);
+            --vp-filter-default--items-hover__background-color: var(--vp-filter-default--items-active__background-color);
+
+            > * {
+                cursor: default;
+            }
         }
 
         .vp-filter__item-count {
             float: right;
-            margin-left: 8px;
-            font-size: 60%;
+            margin-left: var(--vp-filter-default--items-count__offset);
+            font-size: var(--vp-filter-default--items-count__font-size);
         }
     }
 }
