--- a/src/templates/items-list/items-style/fly/style.scss
+++ b/src/templates/items-list/items-style/fly/style.scss
@@ -1,9 +1,11 @@
+@import "./variables";
+
 /**
  * Fly items style
  */
 .vp-portfolio__items-style-fly {
     .vp-portfolio__item a {
-        text-decoration: none;
+        text-decoration: var(--vp-items-style-fly--links__text-decoration);
         outline: none;
         box-shadow: none;
     }
@@ -14,9 +16,10 @@
         right: 0;
         bottom: 0;
         left: 0;
+        color: var(--vp-items-style-fly--overlay__color);
         text-align: center;
-        text-decoration: none;
-        background-color: #212125;
+        text-decoration: var(--vp-items-style-fly--overlay__text-decoration);
+        background-color: var(--vp-items-style-fly--overlay__background-color);
         transform: translateY(-100%) translateX(-100%);
     }
 
@@ -24,7 +27,7 @@
     figcaption.vp-portfolio__item-overlay {
         margin: 0;
         font-style: inherit;
-        color: #fff;
+        color: var(--vp-items-style-fly--overlay__color);
     }
 
     // meta
@@ -36,12 +39,12 @@
         justify-content: center;
         width: 100%;
         height: 100%;
-        padding: 2em;
+        padding: var(--vp-items-style-fly--meta__padding-v) var(--vp-items-style-fly--meta__padding-h);
         color: inherit;
 
         > * {
             max-width: 100%;
-            margin-bottom: 1.5em;
+            margin-bottom: var(--vp-items-style-fly--meta-items__gap);
         }
 
         > :last-child {
@@ -49,93 +52,129 @@
         }
     }
     .vp-portfolio__item-meta-icon {
-        font-size: 2em;
+        font-size: var(--vp-items-style-fly--meta-icon__font-size);
     }
     .vp-portfolio__item-meta-categories {
         display: inline-flex;
         flex-wrap: wrap;
         margin-right: 0;
-        margin-left: 0;
-        font-size: .9em;
-        font-weight: 500;
-        text-transform: uppercase;
+        margin-left: calc(-1 * var(--vp-items-style-fly--meta-categories__gap));
+        font-size: var(--vp-items-style-fly--meta-categories__font-size);
+        font-weight: var(--vp-items-style-fly--meta-categories__font-weight);
+        text-transform: var(--vp-items-style-fly--meta-categories__text-transform);
         list-style-type: none;
-        opacity: .8;
+        opacity: var(--vp-items-style-fly--meta-categories__opacity);
 
         .vp-portfolio__item-meta-category {
             display: flex;
             padding: 0;
             margin: 0;
-            margin-right: 5px;
+            margin-left: var(--vp-items-style-fly--meta-categories__gap);
 
             &::after {
-                content: ", ";
+                content: var(--vp-items-style-fly--meta-categories__separator);
             }
             &:last-of-type::after {
                 content: none;
             }
 
             a {
-                text-decoration: none;
+                text-decoration: var(--vp-items-style-fly--meta-categories__text-decoration);
             }
         }
     }
     .vp-portfolio__item-meta-date {
-        font-weight: 400;
-        opacity: .8;
+        font-weight: var(--vp-items-style-fly--meta-date__font-weight);
+        opacity: var(--vp-items-style-fly--meta-date__font-opacity);
     }
     .vp-portfolio__item-meta-title {
-        font-size: 1.3em;
+        font-size: var(--vp-items-style-fly--meta-title__font-size);
         color: inherit;
     }
     .vp-portfolio__item-meta-excerpt {
-        line-height: 1.5;
-        opacity: .8;
+        line-height: var(--vp-items-style-fly--meta-excerpt__line-height);
+        opacity: var(--vp-items-style-fly--meta-excerpt__opacity);
     }
 
     // align
     .vp-portfolio__item-align-center .vp-portfolio__item-meta {
         align-items: center;
         text-align: center;
+
+        .vp-portfolio__item-meta-categories {
+            justify-content: center;
+        }
     }
     .vp-portfolio__item-align-left .vp-portfolio__item-meta {
         align-items: flex-start;
         text-align: left;
+
+        .vp-portfolio__item-meta-categories {
+            justify-content: flex-start;
+        }
     }
     .vp-portfolio__item-align-right .vp-portfolio__item-meta {
         align-items: flex-end;
         text-align: right;
+
+        .vp-portfolio__item-meta-categories {
+            justify-content: flex-end;
+        }
     }
 
     .vp-portfolio__item-align-top-center .vp-portfolio__item-meta {
         align-items: center;
         justify-content: flex-start;
         text-align: center;
+
+        .vp-portfolio__item-meta-categories {
+            justify-content: center;
+        }
     }
     .vp-portfolio__item-align-top-left .vp-portfolio__item-meta {
         align-items: flex-start;
         justify-content: flex-start;
         text-align: left;
+
+        .vp-portfolio__item-meta-categories {
+            justify-content: flex-start;
+        }
     }
     .vp-portfolio__item-align-top-right .vp-portfolio__item-meta {
         align-items: flex-end;
         justify-content: flex-start;
         text-align: right;
+
+        .vp-portfolio__item-meta-categories {
+            justify-content: flex-end;
+        }
     }
 
     .vp-portfolio__item-align-bottom-center .vp-portfolio__item-meta {
         align-items: center;
         justify-content: flex-end;
         text-align: center;
+
+        .vp-portfolio__item-meta-categories {
+            justify-content: center;
+        }
     }
     .vp-portfolio__item-align-bottom-left .vp-portfolio__item-meta {
         align-items: flex-start;
         justify-content: flex-end;
         text-align: left;
+
+        .vp-portfolio__item-meta-categories {
+            justify-content: flex-start;
+        }
     }
     .vp-portfolio__item-align-bottom-right .vp-portfolio__item-meta {
         align-items: flex-end;
         justify-content: flex-end;
         text-align: right;
+
+        .vp-portfolio__item-meta-categories {
+            justify-content: flex-end;
+        }
     }
 }
