--- a/src/templates/items-list/pagination/style.scss
+++ b/src/templates/items-list/pagination/style.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 /**
  * Default pagination style
  */
@@ -6,8 +8,9 @@
     flex-wrap: wrap;
     justify-content: center;
     padding: 0;
-    margin: -6px;
-    margin-top: 17px;
+    margin: 0;
+    margin-top: calc(-1 * var(--vp-pagination-default--items__gap));
+    margin-left: calc(-1 * var(--vp-pagination-default--items__gap));
     list-style-type: none;
 
     .vp-pagination__item a {
@@ -26,37 +29,43 @@
     .vp-pagination__item {
         flex: 0 0 auto;
         padding: 0;
-        margin: 6px;
+        margin: 0;
+        margin-top: var(--vp-pagination-default--items__gap);
+        margin-left: var(--vp-pagination-default--items__gap);
         text-align: center;
         list-style-type: none;
 
         > * {
             display: block;
-            min-width: 40px;
-            padding: .9em 1.6em;
-            font-size: .7em;
-            font-weight: 600;
-            line-height: 1.4;
-            color: #787878;
-            text-decoration: none;
-            text-transform: uppercase;
-            letter-spacing: .015em;
-            background-color: #f7f7f7;
-            border-radius: 5px;
-            transition: .2s background-color ease, .2s color ease;
-            will-change: background-color, color;
+            min-width: var(--vp-pagination-default--items__min-width);
+            padding: var(--vp-pagination-default--items__padding-v) var(--vp-pagination-default--items__padding-h);
+            font-size: var(--vp-pagination-default--items__font-size);
+            font-weight: var(--vp-pagination-default--items__font-weight);
+            line-height: var(--vp-pagination-default--items__line-height);
+            color: var(--vp-pagination-default--items__color);
+            text-decoration: var(--vp-pagination-default--items__text-decoration);
+            text-transform: var(--vp-pagination-default--items__text-transform);
+            letter-spacing: var(--vp-pagination-default--items__letter-spacing);
+            background-color: var(--vp-pagination-default--items__background-color);
+            border-radius: var(--vp-pagination-default--items__border-radius);
+            transition: var(--vp-pagination-default-transition-duration) background-color var(--vp-pagination-default-transition-easing), var(--vp-pagination-default-transition-duration) color var(--vp-pagination-default-transition-easing);
         }
 
-        &:not(.vp-pagination__item-active) > a:hover,
-        &:not(.vp-pagination__item-active) > a:focus {
-            color: #4b4b4b;
-            background-color: #e8e8e8;
+        > a:hover,
+        > a:focus {
+            color: var(--vp-pagination-default--items-hover__color);
+            background-color: var(--vp-pagination-default--items-hover__background-color);
         }
 
-        &.vp-pagination__item-active > * {
-            color: #fff;
-            cursor: default;
-            background-color: #2540cc;
+        &.vp-pagination__item-active {
+            --vp-pagination-default--items__color: var(--vp-pagination-default--items-active__color);
+            --vp-pagination-default--items__background-color: var(--vp-pagination-default--items-active__background-color);
+            --vp-pagination-default--items-hover__color: var(--vp-pagination-default--items-active__color);
+            --vp-pagination-default--items-hover__background-color: var(--vp-pagination-default--items-active__background-color);
+
+            > * {
+                cursor: default;
+            }
         }
     }
 
@@ -85,102 +94,5 @@
     }
     &.vp-pagination__no-more .vp-pagination__load-more {
         opacity: .5;
-    }
-}
-
-/* Paged */
-[data-vp-pagination-type="paged"] {
-    margin-right: 0;
-    margin-bottom: 0;
-    margin-left: 0;
-
-    .vp-pagination__item {
-        background: none;
-
-        > * {
-            min-width: 30px;
-            padding: .9em;
-            margin: 0;
-            color: inherit;
-            background: none;
-        }
-
-        &:not(.vp-pagination__item-active) > a:hover,
-        &:not(.vp-pagination__item-active) > a:focus {
-            color: #2540cc;
-            background: none;
-        }
-
-        &.vp-pagination__item-active {
-            position: relative;
-
-            // We use this image for the hack to make active item circle instead of square.
-            // <img> added in script /assets/js/pagination-paged.js
-            > img {
-                width: auto;
-                max-width: none;
-                height: 100%;
-                padding: 0;
-                text-align: left;
-                opacity: 0;
-
-                + span {
-                    position: absolute;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    top: 0;
-                    width: 100%;
-                    min-width: 0;
-                    height: 100%;
-                    padding: 0;
-                    border-radius: 50%;
-                }
-            }
-        }
-    }
-}
-
-/* Loading Spinner */
-// Spinner parameters
-$color: rgba(#000, .1) !default;
-$color_inner: #6c7781 !default;
-$size: 20px !default;
-$size_inner: $size * .35 !default;
-$weight: 2px !default;
-
-.vp-spinner {
-    position: relative;
-    display: inline-block;
-    width: $size;
-    height: $size;
-    margin-top: -2px;
-    vertical-align: middle;
-    border-radius: 50%;
-    box-shadow: inset 0 0 0 $weight $color;
-
-    i {
-        position: absolute;
-        display: block;
-        width: $size_inner;
-        height: $size_inner;
-        overflow: hidden;
-        transform-origin: $size / 2 $size / 2;
-        animation: vp-spinner .4s infinite linear;
-
-        &::after {
-            content: "";
-            display: block;
-            width: $size;
-            height: $size;
-            border-radius: 50%;
-            box-shadow: inset 0 0 0 $weight $color_inner;
-        }
-    }
-}
-
-@keyframes vp-spinner {
-    100% {
-        transform: rotate(360deg);
     }
 }
