fixed slider bullets bottom offset

--- a/src/assets/css/layout-slider.scss
+++ b/src/assets/css/layout-slider.scss
@@ -76,6 +76,7 @@
     }
     .vp-portfolio__items-bullets {
         position: absolute;
+        bottom: 0;
         text-align: center;
         z-index: 1;
 
